<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hw1.devlyn.thewateringhole.Hangouts"
    android:background="#ffbd32ff">

    <TextView android:text="@string/Hangouts" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HangoutsNearby"
        android:id="@+id/HangoutsNearby"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:background="#ffc1a875" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Create_Hangout"
        android:id="@+id/Start_Hangout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="#ffc1a875" />

</RelativeLayout>
