<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent">

        <Button
            android:id="@+id/friends_btn"

            android:text="@string/Friends"
            android:textColor="#FEFFFA"
            android:textSize="30sp"

            android:layout_width="125dp"
            android:layout_height="50dp"
            android:background="@drawable/login_button"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:layout_gravity="left|center_vertical"
            android:layout_alignBaseline="@+id/events_btn"
            android:layout_alignBottom="@+id/events_btn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/events_btn"

            android:text="@string/Events"
            android:textColor="#FEFFFA"
            android:textSize="30sp"

            android:layout_width="125dp"
            android:layout_height="50dp"
            android:background="@drawable/login_button"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:layout_gravity="right|center_vertical"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/profile_btn"
            android:layout_toRightOf="@+id/profile_btn" />

        <Button
            android:id="@+id/profile_btn"

            android:text="@string/Profile"
            android:textColor="#FEFFFA"
            android:textSize="30sp"

            android:layout_width="125dp"
            android:layout_height="50dp"
            android:background="@drawable/login_button"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:layout_gravity="center_horizontal|top"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/settings_btn"
            android:layout_alignStart="@+id/settings_btn" />

        <Button
            android:id="@+id/settings_btn"

            android:text="@string/Settings"
            android:textColor="#FEFFFA"
            android:textSize="25sp"

            android:layout_width="125dp"
            android:layout_height="50dp"
            android:background="@drawable/login_button"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/sign_out_button"

        android:text="Sign Out"
        android:textColor="#FEFFFA"
        android:textSize="20sp"

        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/login_button"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_below="@+id/friends_btn"
        android:layout_marginTop="52dp"
        android:layout_alignLeft="@+id/settings_btn"
        android:layout_alignStart="@+id/settings_btn"
        android:layout_toLeftOf="@+id/events_btn"
        android:layout_toStartOf="@+id/events_btn" />
</RelativeLayout>
